--- a/DS2024.ioc
+++ b/DS2024.ioc
@@ -3,7 +3,7 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
-GPIO.groupedBy=
+GPIO.groupedBy=Group By Peripherals
 I2C1.I2C_Mode=I2C_Fast
 I2C1.IPParameters=I2C_Mode
 KeepUserPlacement=false
@@ -18,15 +18,16 @@ Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
+Mcu.Pin10=VP_SYS_VS_Systick
 Mcu.Pin2=PA13
 Mcu.Pin3=PA14
 Mcu.Pin4=PB4
-Mcu.Pin5=PB6
-Mcu.Pin6=PB7
-Mcu.Pin7=PB8
-Mcu.Pin8=PB9
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=10
+Mcu.Pin5=PB5
+Mcu.Pin6=PB6
+Mcu.Pin7=PB7
+Mcu.Pin8=PB8
+Mcu.Pin9=PB9
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C8Tx
@@ -55,6 +56,13 @@ PB4.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PB4.GPIO_PuPd=GPIO_PULLUP
 PB4.Locked=true
 PB4.Signal=GPXTI4
+PB5.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB5.GPIO_Label=BEE
+PB5.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB5.GPIO_PuPd=GPIO_PULLUP
+PB5.Locked=true
+PB5.PinState=GPIO_PIN_SET
+PB5.Signal=GPIO_Output
 PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
@@ -107,7 +115,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_ADC2_Init-ADC2-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.ADCFreqValue=8000000
 RCC.AHBFreq_Value=16000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
