--- a/DS2024.ioc
+++ b/DS2024.ioc
@@ -4,29 +4,27 @@ CAD.pinconfig=
 CAD.provider=
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
-I2C1.I2C_Mode=I2C_Fast
-I2C1.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.CPN=STM32F103C8T6
 Mcu.Family=STM32F1
-Mcu.IP0=I2C1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
+Mcu.IP2=SYS
+Mcu.IP3=TIM4
 Mcu.IPNb=4
 Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PD0-OSC_IN
 Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin10=VP_SYS_VS_Systick
+Mcu.Pin10=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin2=PA13
 Mcu.Pin3=PA14
 Mcu.Pin4=PB4
 Mcu.Pin5=PB5
 Mcu.Pin6=PB6
-Mcu.Pin7=PB7
-Mcu.Pin8=PB8
-Mcu.Pin9=PB9
+Mcu.Pin7=PB8
+Mcu.Pin8=PB9
+Mcu.Pin9=VP_SYS_VS_Systick
 Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -63,14 +61,15 @@ PB5.GPIO_PuPd=GPIO_PULLUP
 PB5.Locked=true
 PB5.PinState=GPIO_PIN_SET
 PB5.Signal=GPIO_Output
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
-PB7.Mode=I2C
-PB7.Signal=I2C1_SDA
-PB8.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB6.GPIOParameters=GPIO_Label
+PB6.GPIO_Label=LED_R
+PB6.Locked=true
+PB6.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB8.GPIO_Label=LED
 PB8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PB8.GPIO_PuPd=GPIO_NOPULL
+PB8.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB8.Locked=true
 PB8.PinState=GPIO_PIN_SET
 PB8.Signal=GPIO_Output
@@ -115,7 +114,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true
 RCC.ADCFreqValue=8000000
 RCC.AHBFreq_Value=16000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
@@ -140,6 +139,10 @@ SH.GPXTI4.0=GPIO_EXTI4
 SH.GPXTI4.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
+TIM4.IPParameters=Prescaler
+TIM4.Prescaler=7200-1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=custom
